# NativeApplication

app/: build.gradle
app/jni/: CMakeLists.txt  Main.cpp
app/src/androidTest/java/com/stx/mygame/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/test/java/com/stx/mygame/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
